force-app/main/default/objects/Image_Storage__c/Image_Storage__c.object-meta.xml
<CustomObject>
    <label>Image Storage</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Image Storage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Image Storages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>