force-app/main/default/objects/Image_Storage__c/fields/Expiry_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_To_Date__c</fullName>
    <label>Expiry To Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>