force-app/main/default/objects/Image_Storage__c/fields/Image_Name__c.field-meta.xml
<CustomField>
    <fullName>Image_Name__c</fullName>
    <label>Image Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>