force-app/main/default/objects/Image_Storage__c/validationRules/CorrectDates.validationRule-meta.xml
<ValidationRule>
    <fullName>CorrectDates</fullName>
    <active>true</active>
    <errorConditionFormula>Expiry_From_Date__c  &gt;=  Expiry_To_Date__c</errorConditionFormula>
    <errorMessage>Expiry From Date should be less than Expiry To Date</errorMessage>
</ValidationRule>